--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -31,6 +31,8 @@
 /*----------------------------------------*/
 
 
+/********************************************* **********************************/
+
 
 .color-indigator-item {
 	width: 1.2rem;
@@ -169,7 +171,7 @@ ol {
 	right: 0;
 	height: 4px;
 	width: 80px;
-	background: #0c0c0c;
+	background: #87CEEB;
 	content: "";
 	margin: 0 auto;
 }
@@ -1256,7 +1258,7 @@ ol {
 }
 
 .sidebar__item__color.sidebar__item__color--green label:after {
-	background: #3CC032;
+	background: #249BC8;
 }
 
 .sidebar__item__color label {
@@ -1379,8 +1381,8 @@ ol {
 }
 
 .product__item__pic__hover li:hover a {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: #249BC8;
+	border-color: #249BC8;
 }
 
 .product__item__pic__hover li:hover a i {
